--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
 body {
     margin-left: 40px;
     margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.top {
+    display: flex;
+    border-bottom: 1px solid #000;
+    margin-bottom: 0px;
 }
 
 h1 {
-    border-bottom: 1px solid #000;
+    margin-bottom: 0px;
+}
+
+.navi {
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 0px;
+    margin-left: 20px;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
 }
 
 ul {
@@ -16,5 +37,6 @@ ul li {
 }
 
 footer {
+    margin-top: auto;
     border-top: 1px solid #000;
 }
