--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 .top {
     display: flex;
-    border-bottom: 1px solid #000;
+    /*border-bottom: 1px solid #000;*/
     margin-bottom: 0px;
 }
 
@@ -38,5 +38,5 @@ ul li {
 
 footer {
     margin-top: auto;
-    border-top: 1px solid #000;
+    /*border-top: 1px solid #000;*/
 }
